--- a/index.html
+++ b/index.html
@@ -219,7 +219,32 @@
           <p>Incolla il testo e ottieni un riassunto perfetto.</p>
           <a href="#riassunti" class="btn-mini">Apri</a>
         </div>
+        
+<!-- PREMIUM -->
+<section id="premium" class="uf-section">
+  <div class="uf-container">
+    <div class="uf-section-head">
+      <h2>UniFlow Premium ⭐</h2>
+      <p>Sblocca tutte le funzioni avanzate e porta il tuo studio al livello successivo.</p>
+    </div>
 
+    <div class="uf-media-box uf-premium-box">
+      <h3>Cosa include:</h3>
+      <ul class="uf-premium-list">
+        <li>⭐ Riassunti AI avanzati</li>
+        <li>⭐ XP Boost +20%</li>
+        <li>⭐ Tema Gold esclusivo</li>
+        <li>⭐ Statistiche avanzate</li>
+        <li>⭐ Planner potenziato</li>
+        <li>⭐ Badge Premium nel profilo</li>
+      </ul>
+
+      <a href="https://buy.stripe.com/test_dRm5kC0ANgt0ax11nec7u00" class="btn-primary uf-premium-btn">
+        Diventa Premium – 9,99€
+      </a>
+    </div>
+  </div>
+</section>
       </div>
     </div>
   </section>
